src/snapshots/asm_codegen__lexer__tests__fn_call.snap
---
source: src/lexer.rs
expression: tokens
---
- type: Fun
  lexeme: fun
  literal: ~
  line: 1
- type: LeftParen
  lexeme: (
  literal: ~
  line: 1
- type: RightParen
  lexeme: )
  literal: ~
  line: 1
- type: LeftBrace
  lexeme: "{"
  literal: ~
  line: 1
- type: Print
  lexeme: print
  literal: ~
  line: 1
- type: Integer
  lexeme: "10"
  literal:
    Integer: 10
  line: 1
- type: Semicolon
  lexeme: ;
  literal: ~
  line: 1
- type: RightBrace
  lexeme: "}"
  literal: ~
  line: 1
- type: Eof
  lexeme: "}"
  literal: ~
  line: 1
