src/snapshots/asm_codegen__lexer__tests__var_assign.snap
---
source: src/lexer.rs
expression: tokens
---
- type: Var
  lexeme: var
  literal: ~
  line: 1
- type: Identifier
  lexeme: x
  literal:
    String: x
  line: 1
- type: Equal
  lexeme: "="
  literal: ~
  line: 1
- type: Integer
  lexeme: "10"
  literal:
    Integer: 10
  line: 1
- type: Semicolon
  lexeme: ;
  literal: ~
  line: 1
- type: Eof
  lexeme: ;
  literal: ~
  line: 1
